# jitgen

./: .bazelignore  .bazelrc  .dockerignore  .gitignore  .gitleaks.toml  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  MODULE.bazel  README.md  SECURITY.md  TODOS.md  deny.toml  progress.json
.github/: dependabot.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/scripts/: smoke.sh
.github/workflows/: _ruleset-gate-validation.yml  jitgen-advisory.yml  release.yml  security.yml  supply-chain.yml  tests.yml
bazel/: BUILD.bazel  defs.bzl  remote_cacheable_tests.txt
crates/jitgen-adapters/: BUILD.bazel  Cargo.toml
crates/jitgen-adapters/src/: builtin.rs  discovery.rs  glob.rs  lang.rs  lib.rs  snapshot.rs  spi.rs  symbols.rs
crates/jitgen-cli/: BUILD.bazel  Cargo.toml
crates/jitgen-cli/src/: cli.rs  hints.rs  main.rs
crates/jitgen-cli/tests/: broken_pipe.rs
crates/jitgen-context/: BUILD.bazel  Cargo.toml
crates/jitgen-context/src/: lib.rs  packager.rs  prompt.rs  redact.rs
crates/jitgen-core/: BUILD.bazel  Cargo.toml
crates/jitgen-core/src/: candidate.rs  change.rs  classify.rs  config.rs  context.rs  error.rs  execution.rs  ids.rs  lib.rs  mode.rs  mutant.rs  target.rs
crates/jitgen-feedback/: BUILD.bazel  Cargo.toml
crates/jitgen-feedback/src/: classify.rs  error.rs  executor.rs  flake.rs  lib.rs  llmstep.rs  minimize.rs  prompts.rs  repair.rs  testkit.rs
crates/jitgen-feedback/src/assess/: judge.rs  mod.rs  rules.rs
crates/jitgen-feedback/src/strategy/: intent_aware.rs  mod.rs
crates/jitgen-feedback/tests/: public_api.rs
crates/jitgen-gitintake/: BUILD.bazel  Cargo.toml
crates/jitgen-gitintake/src/: error.rs  filter.rs  intake.rs  lib.rs
crates/jitgen-llm/: BUILD.bazel  Cargo.toml
crates/jitgen-llm/src/: http.rs  lib.rs  mock.rs  parse.rs  provider.rs  recorded.rs  util.rs  validate.rs
crates/jitgen-llm/src/real/: anthropic.rs  mod.rs  openai.rs  secret.rs
crates/jitgen-materialize/: BUILD.bazel  Cargo.toml
crates/jitgen-materialize/src/: error.rs  lib.rs  overlay.rs  placement.rs
crates/jitgen-orchestrator/: BUILD.bazel  Cargo.toml
crates/jitgen-orchestrator/src/: analyze.rs  checkout.rs  config.rs  context.rs  demo.rs  doctor.rs  e2e_tests.rs  error.rs  executor.rs  gate.rs  lib.rs  patchapply.rs  process.rs  run.rs  targetsel.rs  test_repo.rs
crates/jitgen-report/: BUILD.bazel  Cargo.toml
crates/jitgen-report/src/: escape.rs  lib.rs  model.rs
crates/jitgen-report/src/exporters/: human.rs  json.rs  junit.rs  markdown.rs  mod.rs  patch.rs  sarif.rs
crates/jitgen-sandbox/: BUILD.bazel  Cargo.toml
crates/jitgen-sandbox/src/: backend.rs  classify.rs  command.rs  detect.rs  env.rs  error.rs  lib.rs  policy.rs  run.rs  sandbox.rs  sbpl.rs  spawn.rs  user.rs  which.rs
crates/jitgen-sandbox/tests/: conformance.rs
crates/jitgen-state/: BUILD.bazel  Cargo.toml
crates/jitgen-state/src/: error.rs  fsutil.rs  lib.rs  model.rs  store.rs
docs/: adapter-guide.md  architecture.md  ci.md  final-report.md  implementation-plan.md  implementation-status.md  security.md  troubleshooting.md  user-guide.md
docs/decisions/: 0001-rust-default-and-bazel-monorepo.md  0002-catching-tests-refinement.md  0003-sandbox-strategy.md  0004-ipc-and-protobuf-deferral.md  0005-sqlite-durable-state.md  0006-git-intake-libgit2.md  0007-tree-sitter-symbol-extraction.md  0008-llm-provider-abstraction.md  0009-hermetic-toolchains-ci.md  0010-config-trust-and-fail-closed.md  0011-overlay-materialization.md  0011-real-provider-http-client.md  0012-real-provider-http-client.md  0013-netns-helper-backend.md  README.md
docs/designs/: gp6b-docs-site-spike.md  jitgen-demo-real-catch.md  jitgen-dogfood-sequencing.md
docs/diagrams/: layers.mmd
docs/research/: paper-notes.md
scripts/: audit.sh  check-test-cache-policy.sh  check.sh
