[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
description = "jitgen — Just-in-Time test generation for changed code in a git repository"
repository = "https://example.invalid/jitgen"

# Intra-workspace dependencies (path-based) + pinned external crates (introduced in F2).
[workspace.dependencies]
# External (third-party). Pure-Rust, no build scripts — friendly to Bazel crate_universe.
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
# serde_yaml 0.9.34 is archived-but-stable & de-facto standard; we parse only SIZE-CAPPED untrusted
# `.jitgen.yaml` with it (DoS-bounded). Revisit a maintained fork in F10 hardening.
serde_yaml = "0.9.34"
thiserror = "2.0.11"
# rusqlite with bundled libsqlite3 (ADR-0005): no system SQLite dependency; compiles C via cc.
rusqlite = { version = "0.32.1", features = ["bundled"] }
sha2 = "0.10.8"

# Intra-workspace (path-based).
jitgen-core = { path = "crates/jitgen-core" }
jitgen-state = { path = "crates/jitgen-state" }
jitgen-gitintake = { path = "crates/jitgen-gitintake" }
jitgen-adapters = { path = "crates/jitgen-adapters" }
jitgen-context = { path = "crates/jitgen-context" }
jitgen-llm = { path = "crates/jitgen-llm" }
jitgen-materialize = { path = "crates/jitgen-materialize" }
jitgen-sandbox = { path = "crates/jitgen-sandbox" }
jitgen-feedback = { path = "crates/jitgen-feedback" }
jitgen-report = { path = "crates/jitgen-report" }
jitgen-orchestrator = { path = "crates/jitgen-orchestrator" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
