[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
description = "jitgen — Just-in-Time test generation for changed code in a git repository"
repository = "https://github.com/sondrateconsulting/jitgen"
# App-internal workspace — these crates are never published to crates.io. `publish = false` also lets
# cargo-deny's `allow-wildcard-paths` exempt the internal path deps while still denying wildcard
# requirements on external crates (deny.toml, F10). Repo is currently PRIVATE; see
# docs/designs/jitgen-dogfood-sequencing.md for the private-now-public-later plan.
publish = false

# Intra-workspace dependencies (path-based) + pinned external crates (introduced in F2).
[workspace.dependencies]
# External (third-party). Pure-Rust, no build scripts — friendly to Bazel crate_universe.
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
# serde_yaml 0.9.34 is archived-but-stable & de-facto standard; we parse only SIZE-CAPPED untrusted
# `.jitgen.yaml` with it (DoS-bounded). Revisit a maintained fork in F10 hardening.
serde_yaml = "0.9.34"
thiserror = "2.0.11"
# rusqlite with bundled libsqlite3 (ADR-0005): no system SQLite dependency; compiles C via cc.
rusqlite = { version = "0.32.1", features = ["bundled"] }
sha2 = "0.10.8"
# libgit2 bindings (ADR-0006), vendored + no ssh/https features: local diff/blob reads only,
# hermetic, no system libgit2/openssl. We never invoke repo hooks/filters. Pinned >=0.20.4 to clear
# RUSTSEC-2026-0008 (git2 <0.20.4 `Buf` null-deref unsoundness); resolved in F10 via cargo audit/deny.
git2 = { version = "0.20.4", default-features = false, features = ["vendored-libgit2"] }
# Force statically-built (vendored) zlib so libgit2-sys never probes/links system zlib via
# pkg-config (F3/S1 review #5). Requires a C toolchain at build time (already needed for libgit2).
libz-sys = { version = "1.1.20", features = ["static"] }
# tree-sitter symbol extraction (ADR-0007). Grammars compile C; the 0.23 cohort co-resolves on a
# single tree-sitter version. Grammars are compiled-in; repo `.jitgen.yaml` only selects allowlisted names.
tree-sitter = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-java = "0.23"
tree-sitter-typescript = "0.23"
# Linear-time regex (RE2-style; no catastrophic backtracking) for secret redaction over untrusted text.
regex = "1.11"
# CLI arg parsing (layer 1). default-features=false drops color/suggestions/wrap_help to keep the
# transitive crate set lean (friendlier to Bazel crate_universe re-pinning). Pure-Rust, no build scripts.
clap = { version = "4.5", default-features = false, features = ["derive", "std", "help", "usage", "error-context"] }
# Shell-completion script generation for the `completions` subcommand (layer 1). default-features=false
# keeps the transitive set lean (no unstable-dynamic); pure-Rust, no build scripts, tracks clap 4.5.
clap_complete = { version = "4.5", default-features = false }
# Blocking HTTP client for real LLM providers (ADR-0008 + ADR-0011; wired in F11). Default features
# select rustls + ring + bundled webpki-roots: TLS is always on, the CA set is vendored (hermetic, no
# system trust store), and we avoid aws-lc/native-tls. Like git2/rusqlite/tree-sitter above, its `ring`
# backend runs a build script (cc + pregenerated asm), which Bazel crate_universe handles. Pinned to the
# 3.2.x line: pinned for build stability. (ureq >=3.3 needs rustc 1.85, now within the workspace MSRV
# of 1.85 — adopting a newer ureq is a separate, deliberate change.)
ureq = "~3.2.1"

# Intra-workspace (path-based).
jitgen-core = { path = "crates/jitgen-core" }
jitgen-state = { path = "crates/jitgen-state" }
jitgen-gitintake = { path = "crates/jitgen-gitintake" }
jitgen-adapters = { path = "crates/jitgen-adapters" }
jitgen-context = { path = "crates/jitgen-context" }
jitgen-llm = { path = "crates/jitgen-llm" }
jitgen-materialize = { path = "crates/jitgen-materialize" }
jitgen-sandbox = { path = "crates/jitgen-sandbox" }
jitgen-feedback = { path = "crates/jitgen-feedback" }
jitgen-report = { path = "crates/jitgen-report" }
jitgen-orchestrator = { path = "crates/jitgen-orchestrator" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
