"""jitgen — Just-in-Time test generation. Canonical build is Bazel (Bzlmod); a Cargo workspace is
maintained in parallel for dev ergonomics (ADR-0001)."""

module(
    name = "jitgen",
    version = "0.1.0",
)

# Rust rules. F1 crates are std-only, so no external crate registry (crate_universe) is needed yet;
# it is introduced in F2 when third-party crates (clap, serde, rusqlite, git2, tree-sitter, …) land.
bazel_dep(name = "rules_rust", version = "0.70.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
# Omit an explicit version to use the rules_rust default toolchain (guaranteed integrity hashes).
# The dev/cargo build pins 1.95.0 (rust-toolchain.toml); both compile the same edition-2021 code.
rust.toolchain(edition = "2021")
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# Third-party crates resolved from the Cargo workspace (single source of truth: Cargo.toml +
# Cargo.lock). Exposes `@crates//:<name>` targets used by crate BUILD files (F2+).
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
        "//crates/jitgen-core:Cargo.toml",
        "//crates/jitgen-state:Cargo.toml",
        "//crates/jitgen-gitintake:Cargo.toml",
        "//crates/jitgen-adapters:Cargo.toml",
        "//crates/jitgen-context:Cargo.toml",
        "//crates/jitgen-llm:Cargo.toml",
        "//crates/jitgen-materialize:Cargo.toml",
        "//crates/jitgen-sandbox:Cargo.toml",
        "//crates/jitgen-feedback:Cargo.toml",
        "//crates/jitgen-report:Cargo.toml",
        "//crates/jitgen-orchestrator:Cargo.toml",
        "//crates/jitgen-cli:Cargo.toml",
    ],
)
use_repo(crate, "crates")
