"""jitgen — Just-in-Time test generation. Canonical build is Bazel (Bzlmod); a Cargo workspace is
maintained in parallel for dev ergonomics (ADR-0001)."""

module(
    name = "jitgen",
    version = "0.2.1",
)

# Rust rules. F1 crates are std-only, so no external crate registry (crate_universe) is needed yet;
# it is introduced in F2 when third-party crates (clap, serde, rusqlite, git2, tree-sitter, …) land.
bazel_dep(name = "rules_rust", version = "0.70.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
# Pin the Bazel Rust toolchain to the Cargo dev build's version (rust-toolchain.toml channel = 1.95.0).
# rules_rust 0.70.0's default rustc already happens to be 1.95.0, so this is explicit-not-corrective:
# it stops a future rules_rust bump from silently moving Bazel's rustc off the Cargo pin (which would
# introduce a Cargo-vs-Bazel divergence and stale cross-build cache entries). scripts/check.sh (the
# local gate) fails on drift between the two declared pins and, when Bazel is available, on a resolved
# rustc that isn't 1.95.0.
# rules_rust 0.70.0 ships integrity hashes for 1.95.0, so no explicit sha256s are needed.
rust.toolchain(
    edition = "2021",
    versions = ["1.95.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# Third-party crates resolved from the Cargo workspace (single source of truth: Cargo.toml +
# Cargo.lock). Exposes `@crates//:<name>` targets used by crate BUILD files (F2+).
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    # For a Cargo workspace, only the root manifest is required; members are discovered from it.
    manifests = ["//:Cargo.toml"],
)
use_repo(crate, "crates")
