[package]
name = "jitgen-adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Language discovery & the LanguageAdapter registry. Pipeline layer 4."

[dependencies]
jitgen-core.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-java.workspace = true
tree-sitter-typescript.workspace = true
