load("//bazel:defs.bzl", "jitgen_rust_binary")

jitgen_rust_binary(
    name = "jitgen",
    deps = [
        "//crates/jitgen-core",
        "//crates/jitgen-orchestrator",
        "//crates/jitgen-report",
        "@crates//:clap",
        "@crates//:clap_complete",
        "@crates//:serde_json",
    ],
)
