[package]
name = "jitgen-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "jitgen command-line interface (pipeline layer 1: CLI / presentation)."

[[bin]]
name = "jitgen"
path = "src/main.rs"

[dependencies]
jitgen-core.workspace = true
jitgen-orchestrator.workspace = true
serde_json.workspace = true
# Full arg-parsing (clap) and run/analyze/resume/report wiring arrive in F9.
