[package]
name = "jitgen-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core domain types and the stable, versioned data contract for jitgen."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
