[package]
name = "jitgen-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "LLM provider abstraction with a deterministic mock. Pipeline layer 6."

[dependencies]
jitgen-core.workspace = true
jitgen-context.workspace = true
thiserror.workspace = true
