[package]
name = "jitgen-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "LLM provider abstraction with a deterministic mock. Pipeline layer 6."

[dependencies]
jitgen-core.workspace = true
jitgen-context.workspace = true
thiserror.workspace = true
# Real providers (F11): blocking HTTPS + JSON request/response. See ADR-0008/ADR-0011.
ureq.workspace = true
serde_json.workspace = true
