[package]
name = "jitgen-materialize"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Candidate test materialization, overlay-confined. Pipeline layer 7."

[dependencies]
jitgen-core.workspace = true
sha2.workspace = true
thiserror.workspace = true
