[package]
name = "jitgen-state"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Durable, resumable run state (SQLite). Pipeline layer 2 (run-state)."

[dependencies]
jitgen-core.workspace = true
rusqlite.workspace = true
sha2.workspace = true
thiserror.workspace = true
